# GameEngine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Application.sln  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp
Application/ApplicationManagement/: CMakeLists.txt
Application/ApplicationManagement/Animation/Headers/: Animatable.h  Animation.h  AnimationCurve.h  AnimationManager.h  AnimationMixer.h  AnimationTrack.h  Animator.h  AnimatorComponent.h  Keyframe.h
Application/ApplicationManagement/Animation/Source/: Animatable.cpp  AnimationCurve.cpp  AnimationManager.cpp  AnimationMixer.cpp  AnimationTrack.cpp  Animator.cpp  AnimatorComponent.cpp  Keyframe.cpp
Application/ApplicationManagement/Headers/: ApplicationManager.h  Component.h  Entity.h  GLContextManager.h  SDL2Manager.h  WindowManager.h
Application/ApplicationManagement/Source/: ApplicationManager.cpp  Component.cpp  Entity.cpp  GLContextManager.cpp  SDL2Manager.cpp  WindowManager.cpp
Application/Core/: CMakeLists.txt  CoreUnitTests.cpp
Application/Core/Containers/: CircularBuffer.h
Application/Core/Headers/: CoreDefs.h  Exception.h  FlagEnum.h  Hash.h  ListDefs.h  Macros.h  MapDefs.h  Property.h  PtrDefs.h  TemplateDefs.h  TimeDefs.h
Application/Core/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
Application/Core/Random/: Functions.h  Random.h  RandomGenerator.h
Application/Core/Reflection/: Enums.h  Enums_broken.h  Reflectable.h  ReflectableClasses.h  _Notes.txt  type_traits.h
Application/Core/Serialization/: Serialization.h  SerializationDefs.h  type_traits.h
Application/Core/Source/: Exception.cpp  Hash.cpp
Application/Core/TypeId/: TypeId.h  UUID.h
Application/Core/TypeSafety/: NotNullPtr.h  SafeVoidPtr.h
Application/Core/UnitTests/: HashTesting.cpp
Application/Core/Versioning/: SemanticVersion.h  SimpleVersion.h  Version.h
Application/Data/: CMakeLists.txt
Application/Data/Assets/: Cube.msh  MI.mat  MI.msh
Application/Data/Headers/: AssetData.h  AssetExceptions.h  AssetName.h  AssetType.h  AssetUtils.h  DataUtils.h
Application/Data/Source/: AssetUtils.cpp
Application/Dependencies/: CMakeLists.txt  _Notes.txt
Application/Dependencies/Includes/: glew.h  sdl.h
Application/Resources/: Assets.h  CMakeLists.txt  MaterialAssets.h  MeshAssets.h
Application/TestGame/: CMakeLists.txt
Application/__Planning/: Notes.txt
ThePlant/: CMakeLists.txt
ThePlant/Factory/: CMakeLists.txt  Factory.cpp
ThePlant/Factory/Configs/: FactoryConfig.txt
ThePlant/Factory/Headers/: Config.h  ExportData.h
ThePlant/Factory/NewFactory/: Factory.h
ThePlant/Factory/Source/: Config.cpp  ExportData.cpp
ThePlant/Factory/Workers/: CMakeLists.txt  _Notes.txt
ThePlant/Materials/: CMakeLists.txt
ThePlant/Materials/Core/: CMakeLists.txt  CoreUnitTests.cpp
ThePlant/Materials/Data/: CMakeLists.txt
ThePlant/Materials/Dependencies/: CMakeLists.txt
ThePlant/Pipeline/: CMakeLists.txt  Pipeline.cpp
ThePlant/Pipeline/AssetHandling/: AssetFactory.h  AssetLoaderFactory.cpp  AssetLoaderFactory.h  AssetUtils.h  EntityFactory.cpp  EntityFactory.h  LoadingUtils.h  SavingUtils.h
ThePlant/Pipeline/Collision/: ColliderComponent.h  Collideromponent.h  Collision.h  CollisionHandler.h  CollisionManager.cpp  CollisionManager.h  CollisionSystem.h  CollisionUtils.cpp  CollisionUtils.h  Collisions.h  OctTree.cpp  OctTree.h
ThePlant/Pipeline/Dependencies/: CMakeLists.txt
ThePlant/Pipeline/ECSSystems/: AnimationComponents.h  AnimationSystem.cpp  AnimationSystem.h  CameraComponents.h  CameraSystem.h  ColliderComponents.h  CollisionSystem.h  ComponentSerializers.h  DestroyChildrenSystem.h  ECSSystemUtils.h  GeneralComponents.h  LifetimeComponent.h  LifetimeSystem.h  ParentSyncSystem.h  RenderingComponents.h  RenderingSystem.h  TransformComponents.h  TransformSystem.h
ThePlant/Pipeline/Factory_Temp/: ArchetypesUI.cpp  ArchetypesUI.h  ComponentRefUIFactory.h  EntitySnapshotUI.cpp  EntitySnapshotUI.h  EntitySnapshotUIVisitor.h  Factory.cpp  Factory.h  FactoryUI.cpp  FactoryUI.h  FactoryUtils.cpp  FactoryUtils.h  Notes.txt  UICreator.h  UIUtils.cpp  UIUtils.h  VisitorUtilities.h  _Notes.txt
ThePlant/Pipeline/Headers/: ApplicationManager.h  Component.h  Entity.h  GLContextManager.h  SDL2Manager.h  ServiceManager.h  WindowManager.h
ThePlant/Pipeline/Physics/: PhysicsCollisionHandler.h  PhysicsComponents.h  PhysicsSettings.h  PhysicsSystem.h  VelocitySystem.h
ThePlant/Pipeline/Rendering/: DefaultRenderLayers.cpp  DefaultRenderLayers.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Material.cpp  Material.h  Material_NEW.cpp  Material_NEW.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Mesh_NEW.cpp  Mesh_NEW.h  RenderContext.h  RenderFrame.cpp  RenderFrame.h  RenderLayer.cpp  RenderLayer.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Renderer_NEW.cpp  Renderer_NEW.h
ThePlant/Pipeline/Source/: ApplicationManager.cpp  Component.cpp  Entity.cpp  GLContextManager.cpp  SDL2Manager.cpp  ServiceManager.cpp  WindowManager.cpp
ThePlant/Pipeline/Utils/: RegisterUtils.cpp  RegisterUtils.h  SerializationUtils.cpp  SerializationUtils.h
ThePlant/Product/: CMakeLists.txt  Product.cpp
ThePlant/Product/Dependencies/: CMakeLists.txt
ThePlant/Product/Headers/: CameraController.h  MyProduct.h  MyState.h  ProductManager.h  RegisterUtils.h  WorldInteractor.h
ThePlant/Product/Scripting/: LuaManager.cpp  LuaManager.h
ThePlant/Product/Source/: CameraController.cpp  MyProduct.cpp  MyState.cpp  ProductManager.cpp  RegisterUtils.cpp  WorldInteractor.cpp
ThePlant/Product/Supplies/: Assets.h  CMakeLists.txt  CustomAssets.h
ThePlant/Product/Testing/: TestSystem.cpp  TestSystem.h  TestingUtils.cpp  TestingUtils.h
ThePlant/Resources/Exported/: Assets.h
ThePlant/__Planning/: Notes.txt  Project Plan.xlsx  Todo.txt
(+1381 files in other folders)
