cmake_minimum_required(VERSION 3.12.2)

project(Application)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release"
    CACHE STRING "Configuration types" FORCE)

add_executable(Application
  __Planning/class diagram.png
  ApplicationManagement/Animation/FieldAnimation/Headers/FloatAnimationTrack.h
  ApplicationManagement/Animation/FieldAnimation/Source/FloatAnimationTrack.cpp
  ApplicationManagement/Animation/Headers/Animatable.h
  ApplicationManagement/Animation/Headers/Animation.h
  ApplicationManagement/Animation/Headers/AnimationCurve.h
  ApplicationManagement/Animation/Headers/AnimationManager.h
  ApplicationManagement/Animation/Headers/AnimationMixer.h
  ApplicationManagement/Animation/Headers/Animator.h
  ApplicationManagement/Animation/Headers/AnimatorComponent.h
  ApplicationManagement/Animation/Headers/Keyframe.h
  ApplicationManagement/Animation/SkeletonAnimation/Headers/SkeletonAnimatable.h
  ApplicationManagement/Animation/SkeletonAnimation/Headers/SkeletonAnimation.h
  ApplicationManagement/Animation/SkeletonAnimation/Headers/SkeletonAnimationMixer.h
  ApplicationManagement/Animation/SkeletonAnimation/Headers/SkeletonAnimationTrack.h
  ApplicationManagement/Animation/SkeletonAnimation/Source/SkeletonAnimatable.cpp
  ApplicationManagement/Animation/SkeletonAnimation/Source/SkeletonAnimation.cpp
  ApplicationManagement/Animation/SkeletonAnimation/Source/SkeletonAnimationMixer.cpp
  ApplicationManagement/Animation/SkeletonAnimation/Source/SkeletonAnimationTrack.cpp
  ApplicationManagement/Animation/Source/Animatable.cpp
  ApplicationManagement/Animation/Source/AnimationCurve.cpp
  ApplicationManagement/Animation/Source/AnimationManager.cpp
  ApplicationManagement/Animation/Source/AnimationMixer.cpp
  ApplicationManagement/Animation/Source/Animator.cpp
  ApplicationManagement/Animation/Source/AnimatorComponent.cpp
  ApplicationManagement/Animation/Source/Keyframe.cpp
  ApplicationManagement/Animation/TransformAnimation/Headers/TransformAnimationTrack.h
  ApplicationManagement/Animation/TransformAnimation/Source/TransformAnimationTrack.cpp
  ApplicationManagement/Collision/Headers/BoxCollider.h
  ApplicationManagement/Collision/Headers/ColliderBase.h
  ApplicationManagement/Collision/Headers/CollisionBase.h
  ApplicationManagement/Collision/Headers/CollisionCheck.h
  ApplicationManagement/Collision/Headers/CollisionManager.h
  ApplicationManagement/Collision/Headers/SphericalCollider.h
  ApplicationManagement/Collision/Source/BoxCollider.cpp
  ApplicationManagement/Collision/Source/ColliderBase.cpp
  ApplicationManagement/Collision/Source/CollisionBase.cpp
  ApplicationManagement/Collision/Source/CollisionCheck.cpp
  ApplicationManagement/Collision/Source/CollisionManager.cpp
  ApplicationManagement/Collision/Source/SphericalCollider.cpp
  ApplicationManagement/Debugging/Headers/Declarations.h
  ApplicationManagement/Debugging/Headers/Logging.h
  ApplicationManagement/Debugging/Headers/Macros.h
  ApplicationManagement/Debugging/Source/Logging.cpp
  ApplicationManagement/GameSystem/Headers/GameObjectBase.h
  ApplicationManagement/GameSystem/Headers/GameObjectManager.h
  ApplicationManagement/GameSystem/Headers/GameSystemManager.h
  ApplicationManagement/GameSystem/Source/GameObjectBase.cpp
  ApplicationManagement/GameSystem/Source/GameObjectManager.cpp
  ApplicationManagement/GameSystem/Source/GameSystemManager.cpp
  ApplicationManagement/Geometric/Headers/CameraNode.h
  ApplicationManagement/Geometric/Headers/Container.h
  ApplicationManagement/Geometric/Headers/ContainerBase.h
  ApplicationManagement/Geometric/Headers/ContentBase.h
  ApplicationManagement/Geometric/Headers/HierarchyComponent.h
  ApplicationManagement/Geometric/Headers/Node.h
  ApplicationManagement/Geometric/Headers/Scene.h
  ApplicationManagement/Geometric/Headers/World.h
  ApplicationManagement/Geometric/Source/CameraNode.cpp
  ApplicationManagement/Geometric/Source/ContainerBase.cpp
  ApplicationManagement/Geometric/Source/ContentBase.cpp
  ApplicationManagement/Geometric/Source/HierarchyComponent.cpp
  ApplicationManagement/Geometric/Source/Node.cpp
  ApplicationManagement/Geometric/Source/Scene.cpp
  ApplicationManagement/Geometric/Source/World.cpp
  ApplicationManagement/Headers/ApplicationManager.h
  ApplicationManagement/Headers/Component.h
  ApplicationManagement/Headers/Entity.h
  ApplicationManagement/Headers/GLContextManager.h
  ApplicationManagement/Headers/SDL2Manager.h
  ApplicationManagement/Headers/WindowManager.h
  ApplicationManagement/Input/Headers/InputController.h
  ApplicationManagement/Input/Headers/InputDefs.h
  ApplicationManagement/Input/Headers/InputEvent.h
  ApplicationManagement/Input/Headers/InputManager.h
  ApplicationManagement/Input/Headers/InputReceiverBase.h
  ApplicationManagement/Input/Source/InputController.cpp
  ApplicationManagement/Input/Source/InputDefs.cpp
  ApplicationManagement/Input/Source/InputEvent.cpp
  ApplicationManagement/Input/Source/InputManager.cpp
  ApplicationManagement/Input/Source/InputReceiverBase.cpp
  ApplicationManagement/Rendering/2D/Headers/BoxRenderObject.h
  ApplicationManagement/Rendering/2D/Headers/CircleRenderObject.h
  ApplicationManagement/Rendering/2D/Headers/Image.h
  ApplicationManagement/Rendering/2D/Headers/Material.h
  ApplicationManagement/Rendering/2D/Headers/MaterialComponent.h
  ApplicationManagement/Rendering/2D/Headers/Sprite.h
  ApplicationManagement/Rendering/2D/Headers/Texture.h
  ApplicationManagement/Rendering/2D/Source/BoxRenderObject.cpp
  ApplicationManagement/Rendering/2D/Source/CircleRenderObject.cpp
  ApplicationManagement/Rendering/2D/Source/Image.cpp
  ApplicationManagement/Rendering/2D/Source/Material.cpp
  ApplicationManagement/Rendering/2D/Source/MaterialComponent.cpp
  ApplicationManagement/Rendering/2D/Source/Sprite.cpp
  ApplicationManagement/Rendering/2D/Source/Texture.cpp
  ApplicationManagement/Rendering/3D/Headers/AnimatedModel.h
  ApplicationManagement/Rendering/3D/Headers/Bone.h
  ApplicationManagement/Rendering/3D/Headers/CubeRenderObject.h
  ApplicationManagement/Rendering/3D/Headers/ModelBase.h
  ApplicationManagement/Rendering/3D/Headers/RenderVertexBaseData.h
  ApplicationManagement/Rendering/3D/Headers/SimpleMeshBase.h
  ApplicationManagement/Rendering/3D/Headers/Skeleton.h
  ApplicationManagement/Rendering/3D/Headers/SkeletonComponent.h
  ApplicationManagement/Rendering/3D/Headers/SkinnedMeshBase.h
  ApplicationManagement/Rendering/3D/Headers/SphereRenderObject.h
  ApplicationManagement/Rendering/3D/Source/AnimatedModel.cpp
  ApplicationManagement/Rendering/3D/Source/AnimatorComponent.cpp
  ApplicationManagement/Rendering/3D/Source/Bone.cpp
  ApplicationManagement/Rendering/3D/Source/CubeRenderObject.cpp
  ApplicationManagement/Rendering/3D/Source/ModelBase.cpp
  ApplicationManagement/Rendering/3D/Source/SimpleMeshBase.cpp
  ApplicationManagement/Rendering/3D/Source/Skeleton.cpp
  ApplicationManagement/Rendering/3D/Source/SkeletonComponent.cpp
  ApplicationManagement/Rendering/3D/Source/SkinnedMeshBase.cpp
  ApplicationManagement/Rendering/3D/Source/SphereRenderObject.cpp
  ApplicationManagement/Rendering/Animation/Headers/KeyFrame.h
  ApplicationManagement/Rendering/Animation/Headers/Timeline.h
  ApplicationManagement/Rendering/Animation/Source/KeyFrame.cpp
  ApplicationManagement/Rendering/Animation/Source/Timeline.cpp
  ApplicationManagement/Rendering/Headers/Camera.h
  ApplicationManagement/Rendering/Headers/CameraComponent.h
  ApplicationManagement/Rendering/Headers/CameraManager.h
  ApplicationManagement/Rendering/Headers/CameraUtils.h
  ApplicationManagement/Rendering/Headers/Lights.h
  ApplicationManagement/Rendering/Headers/MaterialManager.h
  ApplicationManagement/Rendering/Headers/RenderComponent.h
  ApplicationManagement/Rendering/Headers/Renderer.h
  ApplicationManagement/Rendering/Headers/RenderManager.h
  ApplicationManagement/Rendering/Headers/RenderObjectBase.h
  ApplicationManagement/Rendering/Headers/RenderObjectManager.h
  ApplicationManagement/Rendering/Headers/SingleCameraManager.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLArrayBuffer.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLBuffer.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLDefs.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLMappedBuffer.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLObject.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLShader.h
  ApplicationManagement/Rendering/OpenGL/Headers/GLShaderProgram.h
  ApplicationManagement/Rendering/OpenGL/Headers/ShaderUtils.h
  ApplicationManagement/Rendering/OpenGL/Source/GLArrayBuffer.cpp
  ApplicationManagement/Rendering/OpenGL/Source/GLBuffer.cpp
  ApplicationManagement/Rendering/OpenGL/Source/GLMappedBuffer.cpp
  ApplicationManagement/Rendering/OpenGL/Source/GLObject.cpp
  ApplicationManagement/Rendering/OpenGL/Source/GLShader.cpp
  ApplicationManagement/Rendering/OpenGL/Source/GLShaderProgram.cpp
  ApplicationManagement/Rendering/OpenGL/Source/ShaderUtils.cpp
  ApplicationManagement/Rendering/Shaders/Headers/DebugObjectShader.h
  ApplicationManagement/Rendering/Shaders/Headers/DebugVertexShader.h
  ApplicationManagement/Rendering/Shaders/Headers/FragmentShader.h
  ApplicationManagement/Rendering/Shaders/Headers/ObjectShader.h
  ApplicationManagement/Rendering/Shaders/Headers/ObjectShaderBase.h
  ApplicationManagement/Rendering/Shaders/Headers/ShaderBase.h
  ApplicationManagement/Rendering/Shaders/Headers/ShaderManager.h
  ApplicationManagement/Rendering/Shaders/Headers/SkinnedObjectShader.h
  ApplicationManagement/Rendering/Shaders/Headers/SkinnedVertexShader.h
  ApplicationManagement/Rendering/Shaders/Headers/VertexShader.h
  ApplicationManagement/Rendering/Shaders/Source/DebugObjectShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/DebugVertexShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/FragmentShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/ObjectShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/ObjectShaderBase.cpp
  ApplicationManagement/Rendering/Shaders/Source/ShaderBase.cpp
  ApplicationManagement/Rendering/Shaders/Source/ShaderManager.cpp
  ApplicationManagement/Rendering/Shaders/Source/SkinnedObjectShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/SkinnedVertexShader.cpp
  ApplicationManagement/Rendering/Shaders/Source/VertexShader.cpp
  ApplicationManagement/Rendering/Source/Camera.cpp
  ApplicationManagement/Rendering/Source/CameraComponent.cpp
  ApplicationManagement/Rendering/Source/CameraManager.cpp
  ApplicationManagement/Rendering/Source/CameraUtils.cpp
  ApplicationManagement/Rendering/Source/Lights.cpp
  ApplicationManagement/Rendering/Source/MaterialManager.cpp
  ApplicationManagement/Rendering/Source/RenderComponent.cpp
  ApplicationManagement/Rendering/Source/Renderer.cpp
  ApplicationManagement/Rendering/Source/RenderManager.cpp
  ApplicationManagement/Rendering/Source/RenderObjectBase.cpp
  ApplicationManagement/Rendering/Source/RenderObjectManager.cpp
  ApplicationManagement/Rendering/Source/SingleCameraManager.cpp
  ApplicationManagement/Source/ApplicationManager.cpp
  ApplicationManagement/Source/Component.cpp
  ApplicationManagement/Source/Entity.cpp
  ApplicationManagement/Source/GLContextManager.cpp
  ApplicationManagement/Source/SDL2Manager.cpp
  ApplicationManagement/Source/WindowManager.cpp
  ApplicationManagement/StateSystem/Headers/State.h
  ApplicationManagement/StateSystem/Headers/StateManager.h
  ApplicationManagement/StateSystem/Source/State.cpp
  ApplicationManagement/StateSystem/Source/StateManager.cpp
  ApplicationManagement/Time/Headers/TimeManager.h
  ApplicationManagement/Time/Source/TimeManager.cpp
  Core/CoreUnitTests.cpp
  Core/Debugging/Headers/Declarations.h
  Core/Debugging/Headers/Macros.h
  Core/Functionality/Headers/Event.h
  Core/Functionality/Headers/Function.h
  Core/Functionality/Headers/LockerBase.h
  Core/Functionality/Headers/Scheduler.h
  Core/Functionality/Headers/Subscription.h
  Core/Functionality/Source/Scheduler.cpp
  Core/Functionality/Source/Subscription.cpp
  Core/Geometric/2D/Headers/Box.h
  Core/Geometric/2D/Headers/Circle.h
  Core/Geometric/2D/Headers/Geometry.h
  Core/Geometric/2D/Headers/GeometryFunctions.h
  Core/Geometric/2D/Headers/Line.h
  Core/Geometric/2D/Headers/Point.h
  Core/Geometric/2D/Headers/Polygon.h
  Core/Geometric/2D/Source/Box.cpp
  Core/Geometric/2D/Source/Circle.cpp
  Core/Geometric/2D/Source/Geometry.cpp
  Core/Geometric/2D/Source/GeometryFunctions.cpp
  Core/Geometric/2D/Source/Line.cpp
  Core/Geometric/2D/Source/Point.cpp
  Core/Geometric/2D/Source/Polygon.cpp
  Core/Geometric/Headers/GeometryDefs.h
  Core/Geometric/Headers/Transform.h
  Core/Geometric/Source/Transform.cpp
  Core/Headers/AllCore.h
  Core/Headers/CoreDefs.h
  Core/Headers/Exception.h
  Core/Headers/FlagEnum.h
  Core/Headers/Hash.h
  Core/Headers/ListDefs.h
  Core/Headers/MapDefs.h
  Core/Headers/Property.h
  Core/Headers/PtrDefs.h
  Core/Headers/TemplateDefs.h
  Core/Headers/TimeDefs.h
  Core/IO/Headers/Exception.h
  Core/IO/Headers/File.h
  Core/IO/Headers/Folder.h
  Core/IO/Headers/IODefs.h
  Core/IO/Headers/IOUtils.h
  Core/IO/Source/File.cpp
  Core/IO/Source/Folder.cpp
  Core/IO/Source/IOUtils.cpp
  Core/Math/Headers/Axis.h
  Core/Math/Headers/Basis.h
  Core/Math/Headers/Color.h
  Core/Math/Headers/MathDefs.h
  Core/Math/Headers/MathUtils.h
  Core/Math/Headers/Matrix.h
  Core/Math/Headers/Matrix2x2.h
  Core/Math/Headers/Matrix3x3.h
  Core/Math/Headers/Matrix4x4.h
  Core/Math/Headers/MatrixFunctions.h
  Core/Math/Headers/Quaternion.h
  Core/Math/Headers/QuaternionFunctions.h
  Core/Math/Headers/UtilityFunctions.h
  Core/Math/Headers/Vector.h
  Core/Math/Headers/Vector2.h
  Core/Math/Headers/Vector3.h
  Core/Math/Headers/Vector4.h
  Core/Math/Headers/VectorFunctions.h
  Core/Math/Source/UtilityFunctions.cpp
  Core/Math/UnitTests/MathUnitTests.h
  Core/Math/UnitTests/MatrixTests.cpp
  Core/Math/UnitTests/MatrixTests.h
  Core/Math/UnitTests/VectorTests.cpp
  Core/Math/UnitTests/VectorTests.h
  Core/Networking/Headers/Macros.h
  Core/Networking/Headers/NetworkConnection.h
  Core/Networking/Headers/NetworkData.h
  Core/Networking/Headers/NetworkMap.h
  Core/Networking/Headers/NetworkProtocol.h
  Core/Networking/Headers/NetworkReceiver.h
  Core/Networking/Headers/NetworkSender.h
  Core/Networking/Headers/Utils.h
  Core/Networking/Source/NetworkProtocol.cpp
  Core/Networking/Source/Utils.cpp
  Core/Source/Exception.cpp
  Core/Source/Hash.cpp
  Data/Headers/AssetData.h
  Data/Headers/AssetExceptions.h
  Data/Headers/AssetName.h
  Data/Headers/AssetType.h
  Data/Headers/AssetUtils.h
  Data/Rendering/Headers/AnimatedMeshData.h
  Data/Rendering/Headers/AnimatedModelData.h
  Data/Rendering/Headers/MaterialData.h
  Data/Rendering/Headers/SimpleMeshData.h
  Data/Rendering/Headers/SimpleModelData.h
  Data/Rendering/Headers/SkeletonAnimationData.h
  Data/Rendering/Headers/SkeletonData.h
  Data/Rendering/Headers/StaticMeshData.h
  Data/Rendering/Headers/StaticModelData.h
  Data/Rendering/Headers/TextureData.h
  Data/Rendering/Headers/VertexBaseData.h
  Data/Rendering/Source/AnimatedMeshData.cpp
  Data/Rendering/Source/AnimatedModelData.cpp
  Data/Rendering/Source/MaterialData.cpp
  Data/Rendering/Source/SimpleMeshData.cpp
  Data/Rendering/Source/SimpleModelData.cpp
  Data/Rendering/Source/SkeletonAnimationData.cpp
  Data/Rendering/Source/SkeletonData.cpp
  Data/Rendering/Source/StaticMeshData.cpp
  Data/Rendering/Source/StaticModelData.cpp
  Data/Rendering/Source/TextureData.cpp
  Data/Source/AssetUtils.cpp
  Dependencies/Includes/GLEW/glew.h
  Dependencies/Includes/SDL2/begin_code.h
  Dependencies/Includes/SDL2/close_code.h
  Dependencies/Includes/SDL2/SDL.h
  Dependencies/Includes/SDL2/SDL_assert.h
  Dependencies/Includes/SDL2/SDL_atomic.h
  Dependencies/Includes/SDL2/SDL_audio.h
  Dependencies/Includes/SDL2/SDL_bits.h
  Dependencies/Includes/SDL2/SDL_blendmode.h
  Dependencies/Includes/SDL2/SDL_clipboard.h
  Dependencies/Includes/SDL2/SDL_config.h
  Dependencies/Includes/SDL2/SDL_config_android.h
  Dependencies/Includes/SDL2/SDL_config_iphoneos.h
  Dependencies/Includes/SDL2/SDL_config_macosx.h
  Dependencies/Includes/SDL2/SDL_config_minimal.h
  Dependencies/Includes/SDL2/SDL_config_pandora.h
  Dependencies/Includes/SDL2/SDL_config_psp.h
  Dependencies/Includes/SDL2/SDL_config_windows.h
  Dependencies/Includes/SDL2/SDL_config_winrt.h
  Dependencies/Includes/SDL2/SDL_config_wiz.h
  Dependencies/Includes/SDL2/SDL_copying.h
  Dependencies/Includes/SDL2/SDL_cpuinfo.h
  Dependencies/Includes/SDL2/SDL_egl.h
  Dependencies/Includes/SDL2/SDL_endian.h
  Dependencies/Includes/SDL2/SDL_error.h
  Dependencies/Includes/SDL2/SDL_events.h
  Dependencies/Includes/SDL2/SDL_filesystem.h
  Dependencies/Includes/SDL2/SDL_gamecontroller.h
  Dependencies/Includes/SDL2/SDL_gesture.h
  Dependencies/Includes/SDL2/SDL_haptic.h
  Dependencies/Includes/SDL2/SDL_hints.h
  Dependencies/Includes/SDL2/SDL_image.h
  Dependencies/Includes/SDL2/SDL_joystick.h
  Dependencies/Includes/SDL2/SDL_keyboard.h
  Dependencies/Includes/SDL2/SDL_keycode.h
  Dependencies/Includes/SDL2/SDL_loadso.h
  Dependencies/Includes/SDL2/SDL_log.h
  Dependencies/Includes/SDL2/SDL_main.h
  Dependencies/Includes/SDL2/SDL_messagebox.h
  Dependencies/Includes/SDL2/SDL_mouse.h
  Dependencies/Includes/SDL2/SDL_mutex.h
  Dependencies/Includes/SDL2/SDL_name.h
  Dependencies/Includes/SDL2/SDL_net.h
  Dependencies/Includes/SDL2/SDL_opengl.h
  Dependencies/Includes/SDL2/SDL_opengl_glext.h
  Dependencies/Includes/SDL2/SDL_opengles.h
  Dependencies/Includes/SDL2/SDL_opengles2.h
  Dependencies/Includes/SDL2/SDL_opengles2_gl2.h
  Dependencies/Includes/SDL2/SDL_opengles2_gl2ext.h
  Dependencies/Includes/SDL2/SDL_opengles2_gl2platform.h
  Dependencies/Includes/SDL2/SDL_opengles2_khrplatform.h
  Dependencies/Includes/SDL2/SDL_pixels.h
  Dependencies/Includes/SDL2/SDL_platform.h
  Dependencies/Includes/SDL2/SDL_power.h
  Dependencies/Includes/SDL2/SDL_quit.h
  Dependencies/Includes/SDL2/SDL_rect.h
  Dependencies/Includes/SDL2/SDL_render.h
  Dependencies/Includes/SDL2/SDL_revision.h
  Dependencies/Includes/SDL2/SDL_rwops.h
  Dependencies/Includes/SDL2/SDL_scancode.h
  Dependencies/Includes/SDL2/SDL_shape.h
  Dependencies/Includes/SDL2/SDL_stdinc.h
  Dependencies/Includes/SDL2/SDL_surface.h
  Dependencies/Includes/SDL2/SDL_system.h
  Dependencies/Includes/SDL2/SDL_syswm.h
  Dependencies/Includes/SDL2/SDL_test.h
  Dependencies/Includes/SDL2/SDL_test_assert.h
  Dependencies/Includes/SDL2/SDL_test_common.h
  Dependencies/Includes/SDL2/SDL_test_compare.h
  Dependencies/Includes/SDL2/SDL_test_crc32.h
  Dependencies/Includes/SDL2/SDL_test_font.h
  Dependencies/Includes/SDL2/SDL_test_fuzzer.h
  Dependencies/Includes/SDL2/SDL_test_harness.h
  Dependencies/Includes/SDL2/SDL_test_images.h
  Dependencies/Includes/SDL2/SDL_test_log.h
  Dependencies/Includes/SDL2/SDL_test_md5.h
  Dependencies/Includes/SDL2/SDL_test_memory.h
  Dependencies/Includes/SDL2/SDL_test_random.h
  Dependencies/Includes/SDL2/SDL_thread.h
  Dependencies/Includes/SDL2/SDL_timer.h
  Dependencies/Includes/SDL2/SDL_touch.h
  Dependencies/Includes/SDL2/SDL_ttf.h
  Dependencies/Includes/SDL2/SDL_types.h
  Dependencies/Includes/SDL2/SDL_version.h
  Dependencies/Includes/SDL2/SDL_video.h
  Dependencies/Includes/SDL2/SDL_vulkan.h
  main.cpp
  Resources/Assets.h
  Resources/CustomAssets.h
  Resources/MaterialAssets.h
  Resources/MeshAssets.h
)
# Additional include directories
set_property(TARGET Application
  APPEND PROPERTY INCLUDE_DIRECTORIES
  $<$<CONFIG:Debug>:
    ${CMAKE_CURRENT_SOURCE_DIR}/Core;
    ${CMAKE_CURRENT_SOURCE_DIR}/ApplicationManagement;
    ${CMAKE_CURRENT_SOURCE_DIR}/../Application;
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Includes/GLEW;
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Includes/SDL2>
  $<$<CONFIG:Release>:
    ${CMAKE_CURRENT_SOURCE_DIR}/Core;
    ${CMAKE_CURRENT_SOURCE_DIR}/ApplicationManagement;
    ${CMAKE_CURRENT_SOURCE_DIR}/../Application;
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Includes/GLEW;
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Includes/SDL2>
)

# Preprocessor definitions
target_compile_definitions(Application PRIVATE
  $<$<CONFIG:Debug>:_UNICODE;_DEBUG;_CONSOLE>
  $<$<CONFIG:Release>:_UNICODE;NDEBUG;_CONSOLE>
)

# SDL check
target_compile_options(Application PRIVATE
  "$<$<CONFIG:Debug>:/sdl>"
  "$<$<CONFIG:Release>:/sdl>"
)

# Minimal rebuild
if (MSVC)
  target_compile_options(Application PRIVATE
    "$<$<CONFIG:Debug>:/Gm->"
    "$<$<CONFIG:Release>:/Gm->"
  )
endif ()

# Precompiled header files
if (MSVC)
  target_compile_options(Application PRIVATE
    ""
  )
endif ()

# Additional library directories
if (MSVC)
  target_link_options(Application PRIVATE
    $<$<CONFIG:Debug>:
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/GLEW
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Core
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/SDL2>
    $<$<CONFIG:Release>:
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/GLEW
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Core
      /LIBPATH:${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/SDL2>
  )
else ()
  target_link_options(Application PRIVATE
    $<$<CONFIG:Debug>:
      -L${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/GLEW
      -L${CMAKE_CURRENT_SOURCE_DIR}/Core
      -L${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/SDL2>
    $<$<CONFIG:Release>:
      -L${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/GLEW
      -L${CMAKE_CURRENT_SOURCE_DIR}/Core
      -L${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Libs/64Bit/SDL2>
  )
endif ()

# Link libraries
set_property(TARGET Application
  APPEND PROPERTY LINK_LIBRARIES
  "$<$<CONFIG:Debug>:OpenGL32.lib;glew32s.lib;SDL2_image.lib;SDL2_net.lib;SDL2_ttf.lib;SDL2main.lib;SDL2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib>"
  "$<$<CONFIG:Release>:OpenGL32.lib;glew32s.lib;SDL2_image.lib;SDL2_net.lib;SDL2_ttf.lib;SDL2main.lib;SDL2.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib>"
)
